Configurações Dockerfile + Melhorias de Execução

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -8,6 +8,24 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends \
+        libgl1 \
+        libglib2.0-0 \
+        libsm6 \
+        libxext6 \
+        libxrender1 \
+        libxcb1 \
+        libxcb-xinerama0 \
+        libxcb-icccm4 \
+        libxcb-image0 \
+        libxcb-keysyms1 \
+        libxcb-randr0 \
+        libxcb-render-util0 \
+        libxcb-xfixes0 && \
+    rm -rf /var/lib/apt/lists/*
+
+
 # 4. Copiar o restante do código
 COPY . .
 
